--- a/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
@@ -1,33 +1,33 @@
 ﻿l_english:
 
 ### Events ###
- dei.1.t:0 "The Indies in 1936"
- dei.1.d:0 "Barring the syndicalist revolt in 1925, the crown jewel of the Dutch empire has been a beacon of stability, taking advantage of Dutch ascension into Mitteleuropa to sell its goods (sugar, coffee, oil) to the newly opened up markets. In spite of the competition from the now properly set-up and rebuilt German competition, this economic growth managed to keep up and stability came along with it.\nDespite this, Dutch authorities suppress any call for independence, with the Dutch government believing they will not be able to survive without 'de oost', but despite this, the movements grow. Many in the colonial administration fear that if economic hardship were to appear again, events like 1925 might repeat, or worse..."
- dei.1.a:0 "But economic hardship seems miles away!"
- dei.2.t:0 "Black Monday hits the Indies"
- dei.2.d:0 "The result of the economic hardship that hit Europe after the Black Monday crash could soon be felt in the Dutch East Indies too, who had been selling their goods on the Mitteleuropa market since the end of the Weltkrieg. As the common man in Europe could no longer afford to purchase goods such as sugar and coffee, the prices of said goods imploded, with deeplying implications for the farmers here."
- dei.2.a:0 "Oh no!"
+ dei.1.t:0 "1936년 동인도 제도"
+ dei.1.d:0 "1925년 생디칼리즘 폭동이 없었다면 네덜란드 제국의 왕관 보석은 안정의 횃불이 되었을 것이고, 네덜란드가 새로운 시장에 상품 (설탕, 커피, 석유)를 판매하기 위해 미틀오이로파와 가까워진 데에 이익을 보았을 것입니다. 현재 제대로 다시 강화된 독일의 경쟁력에도 불구하고, 이러한 경제 성장은 그럭저럭 이어졌으며 안정도 같이 찾아왔습니다. \n그럼에도 불구하고 네덜란드 정부는 'de oost' 없이는 네덜란드가 살아남을 수 없다 믿으며 어떠한 독립에 관한 요구도 묵살했지만, 사람들의 요구는 점점 거세지고 있습니다. 식민지 정부의 많은 사람들은 경제적으로 어려워진다면 1925년이 반복되거나 더 나빠질 것을 우려하고 있습니다..."
+ dei.1.a:0 "그렇지만 경제적 어려움은 저 멀리 있는 걸로 보이는군!"
+ dei.2.t:0 "검은 월요일이 동인도 제도를 강타하다"
+ dei.2.d:0 "검은 월요일 사건 이후 유럽을 강타한 경제적 어려움의 결과는 세계대전이 끝났을 때부터 상품을 미틀오이로파 시장에 팔았던 네덜란드령 동인도 제도에서도 곧 느껴질 것입니다. 평범한 유럽인들이 더 이상 설탕이나 커피를 살 여유가 없게 되면서, 그 상품의 가격은 붕괴하였고 이는 농민들에게 큰 영향을 끼쳤습니다."
+ dei.2.a:0 "안돼!"
  dei.3.t:0 "Growing Unity in Independence Movements"
  dei.3.d:0 "The PID is reporting that the unity among independence movements has been growing lately. It would be prudent to keep a watchful eye over them and to stop them from growing stronger (and preferably weakening their unity), lest their collaboration result in a stronger movement overall."
  dei.3.a:0 "We'll be vigilant!"
  dei.4.t:0 "Falling Unity in Independence Movements"
  dei.4.d:0 "The PID is reporting that the unity among independence movements is faltering and now even falling. While it would be unwise to sit back and relax now, we will have less problems controlling them in the near future as cracks in their collaboration begin to show."
  dei.4.a:0 "That's great!"
- dei.5.t:0 "Strength of the Independence Movements Grows"
+ dei.5.t:0 "독립 운동이 세를 키우다"
  dei.5.d:0 "The PID reports that the movements propagating the independence of Insulindia are growing in strength. We might want to consider being more careful in delicate situations, and to crack down on them where we can, lest we become unable to control them."
  dei.5.a:0 "Worrying..."
- dei.6.t:0 "Strength of the Independence Movements Falters"
+ dei.6.t:0 "독립 운동의 세가 흔들리다"
  dei.6.d:0 "The PID reports that the movements propagating the independence of Insulindia are losing punching power. While we should remain vigilant, as they aren't dead, we can rule slightly more relaxed in the near future as it will be easier to control them in the short term."
  dei.6.a:0 "Great!"
  dei.7.t:0 "Governor-General De Jonge resigns"
  dei.7.d:0 "Our Governor-General Bonifacius de Jonge had mentioned multiple times that he intended to resign from his post as governor-general of the Indies, but delayed it in the light of the Dutch elections, that were increasingly showing to become an electoral feast for his patron party, the VNH, back in the Netherlands. For better or worse, the elections are over now, and it will remain to be seen who the new minister of colonies will appoint as his replacement."
  dei.7.a:0 "We await the decision with joy!"
- dei.8.t:0 "A Replacement for the Governor-General"
+ dei.8.t:0 "총독 교체"
  dei.8.d:0 "The Governor-General of the Dutch East Indies, Bonifacius Cornelis de Jonge has announced his intend to resign, having waited for the election to do this so that the new government could appoint the new governor-general without the need of him being replaced within half a year which would, in De Jonge's eyes, be harmful for the stability of the Indies.\nMultiple candidates have come forward, but only one can become Governor-General..."
  dei.8.a:0 "Nico Palar, who will rule with a soft hand."
  dei.8.b:0 "A. Tjarda van Starkenborgh-Stachouwer, the balanced candidate"
  dei.8.c:0 "Johan Furstner, who will keep the Inlanders under control by force!"
- dei.9.t:0 "Governor-General Nico Palar"
+ dei.9.t:0 "니코 팔라르 총독"
  dei.9.d:0 "The Ministry of Colonies has decided to appoint the social democrat Nicodemus Palar as our new Governor-General, who is also the first Inlander governor-general of the colony. The new Governor-General is expected to rule the Indies through compromise, working towards an equal status within the kingdom or even national independence.\nNeedless to say, the white ruling class and the Indo-Dutch community are somewhat worried by this development, fearing the end of the East Indies as they know it. On the other hand, Inlanders are very happy with this change."
  dei.9.a:0 "Welcome, your excellence!"
  dei.10.t:0 "Governor-General A. Tjarda van Starkenborgh-Stachouwer"
@@ -36,89 +36,89 @@
  dei.11.t:0 "Governor-General Johan Furstner"
  dei.11.d:0 "The ministry of colonies has decided to appoint the VNH-strongman Johan Furstner as our new Governor-General, the preferred choice as successor of now-former governor-general De Jonge. The new Governor-General is expected to act strongly, putting down nationalism by force and reinforcing the status-quo of Dutch rule. Equal status is not on the agenda.\nThe white ruling class and the Indo-Dutch community are very pleased with this choice of a hardliner, but it's unlikely the Inlanders will be happy with it."
  dei.11.a:0 "Welcome, your excellence!"
- dei.12.t:0 "You encountered a bug!"
- dei.12.d:0 "You encountered a bug related to the Dutch East Indies. Please report this to GitHub and tag Thomahawk2k. Thank you for your time."
+ dei.12.t:0 "당신은 버그를 만났습니다!"
+ dei.12.d:0 "당신은 네덜란드령 동인도 제도에 관한 버그와 만났습니다.. Please report this to GitHub and tag Thomahawk2k. Thank you for your time."
  dei.12.a:0 "Of course I will report this!"
- dei.13.t:0 "Proclamation of Insulindian Independence"
+ dei.13.t:0 "인슐린디아 독립 선언"
  dei.13.d:0 "With the recent growth of the Insulindian independence movement, it probably does not come as a surprise: Sukarno has issued a proklamasi, proclamation, calling upon all Insulindians to resist the Dutch occupier and to join the Tentara Keselamatan Rakyat, the People's Safety Army. It seems an outright revolt to remove Dutch rule from the Insulindian archipelago has erupted."
- dei.13.a:0 "Bersiap! (Play Insulindia)"
+ dei.13.a:0 "경계하라! (인슐린디아로 플레이)"
  dei.13.b:0 "Bereid de Politionele Acties Voor! (Play Dutch East Indies)"
- dei.14.t:0 "Dutch Armories Overrun"
+ dei.14.t:0 "네덜란드 무기고를 공격하다"
  dei.14.d:0 "As the opening stages of the Insulindian National Revolution have arrived, our brave troops have raided Dutch armories across Java and Sumatra for the guns stored there. They will be put to good use in driving the colonial menace from our homeland!"
  dei.14.a:0 "Long live the Republic!"
- dei.15.t:0 "TKR raids Armories"
+ dei.15.t:0 "TKR이 무기고를 약탈하다"
  dei.15.d:0 "Insulindian republican forces have raided armories across the countries for guns, quickly overrunning them with their superior numbers. While the casualty rate is small, we have lost several batches of guns to the Republican Army of Insulindia, which could pose a problem later on."
  dei.15.a:0 "Oh no!"
- dei.16.t:0 "Volksraad passes the Sutardjo-Petition"
+ dei.16.t:0 "인민의회가 수타르조 탄원서를 통과시키다"
  dei.16.d:0 "The Volksraad, the largely powerless 'parliament' of our colony, has passed a petition of Soetardjo Kartohadikoesoemo, calling for a conference to speak about the future of the Dutch East Indies, specifically in terms of promoting it to an equal status within the kingdom. With it being passed it is now the task of the Governor-General to send it back home. The Volksraad is merely an advisory legislature however, and the Dutch and Indo population is concerned about the implications of the petition, so we could also simply veto the whole deal."
  dei.16.a:0 "Veto, of course!"
  dei.16.b:0 "Let's send it to the Netherlands"
- dei.17.t:0 "The Sutardjo-Petition"
+ dei.17.t:0 "수타르조 탄원서"
  dei.17.d:0 "A petition that has been passed by the Volksraad has arrived on the desk of prime minister Colijn, having been sent to us by the Governor-General [DEI.GetLeader]. Apparently the petition calls for a congress to speak about the future of the status of the Dutch East Indies within the kingdom. The Volksraad has already removed all timelimits the original proposal included, so the prime minister made his choice already when to handle it in the house of representatives."
  dei.17.a:0 "...somewhere next year sounds good!"
- dei.18.t:0 "Sutardjo-Petition in the House"
+ dei.18.t:0 "수타르조 탄원서가 하원에 들어가다"
  dei.18.d:0 "As decided by Hendrik Colijn about a year ago, the Sutardjo-Petition has been brought up at the house of representatives, calling for a congress about the revision of the status of the Dutch East Indies, specifically towards the promotion of an equal status within the kingdom. When the vote is held, the petition is..."
  dei.18.a:0 "...accepted: tell the colonial government to hold a congress when they're ready!" 
  dei.18.b:0 "...rejected: any such proposal should be regulated by the Netherlands"
- dei.19.t:0 "Sutardjo-Petition Rejected"
+ dei.19.t:0 "수타르조 탄원서가 거절되다"
  dei.19.d:0 "The homeland has rejected the Sutardjo-Petition we've sent to them about a year ago, with most of those voting against it citing the fact that the Dutch East Indies is an overseas territory and not a colony that can be uplifted to equal status. Obviously the real reason is that they think the Insulindians aren't ready for self-rule, and it seems obvious that the Insulindians won't be happy with this."
  dei.19.a:0 "All's well that ends well!"
- dei.20.t:0 "Sutardjo-Petition Accepted"
+ dei.20.t:0 "수타르조 탄원서가 받아들여지다"
  dei.20.d:0 "The homeland has accepted the Sutardjo-Petition we've sent to them about a year ago, although they did remove all the timelimits. They know full well the implications of such a conference, so assurances are sought that we handle it with care, and only when we're ready. The door, however, is open for promoting the Indies to an equal status."
  dei.20.a:0 "The Inlanders will be pleased"
- dei.21.t:0 "Formation of GAPI"
+ dei.21.t:0 "GAPI가 형성되다"
  dei.21.d:0 "As a result of the rejection of their plan for a conference, all Inlander parties (with exception of the PNI) have merged into a singular Insulindian Political Federation, calling for the full implementation of an Insulindian parliament and thus for Insulindian equal status once more. As the Dutch government is obviously unwilling to fulfill this wish, especially in the light of rising international tensions, this will only help unite the Inlanders in the independence movement."
  dei.21.a:0 "Why does this always have to happen to me?!"
- dei.22.t:0 "The Round-Table Conference"
+ dei.22.t:0 "원탁회의"
  dei.22.d:0 "The Dutch have shown their inability to quash our rebellion, and with the international community starting to notice our plight, their position is becoming increasingly unstable. We will likely be able to negotiate a favorable deal - establishing sovereignty over all the Insulindian archipelago."
  dei.22.a:0 "The day has come!"
- dei.23.t:0 "The Round-Table Conference"
+ dei.23.t:0 "원탁회의"
  dei.23.d:0 "Having been unable to quell the rebellion and with republican forces holding sway over virtually all of Java and Sumatra, it seems impossible to maintain our position in our colony. The republicans have put forward their demands: full sovereignty over all of the Indies, but perhaps we can at least salvage parts of our colony?"
  dei.23.a:0 "Sign the treaty"
  dei.23.b:0 "We will not give up New Guinea!"
  dei.23.c:0 "We will not give up New Guinea or the Moluccas!"
  dei.23.e:0 "We will not give up at all!"
- dei.24.t:0 "The Dutch sign the treaty!"
+ dei.24.t:0 "네덜란드가 조약에 서명하다!"
  dei.24.d:0 "The Dutch have agreed to transfer all sovereignty over the Indies to the republic of Insulindia. This is a great day for our country, and will be remembered by the generations after us, for today Insulindia became officially an independent country, free from imperialism!"
  dei.24.a:0 "Merdeka has been achieved!"
- dei.25.t:0 "The Dutch make counterdemands!"
+ dei.25.t:0 "네덜란드가 요구하다!"
  dei.25.d:0 "Citing the impossibility of getting the needed support to pull through the amendment to the constitution to allow for the transfer of sovereignty, the Dutch say they need to retain sovereignty over Western Irian (New Guinea). While this is a setback, it seems unlikely at current that we will be able to take the island by force as we lack the Dutch naval capacity. Perhaps we're better served agreeing with this deal than to continue hostilities: they'll agree to concede the much more valuable rest of the archipelago after all..."
  dei.25.a:0 "We'll sign, we'll get West Irian later!"
  dei.25.b:0 "This is unacceptable"
- dei.26.t:0 "The Insulindians refuse!"
+ dei.26.t:0 "인슐린디아가 거부하다!"
  dei.26.d:0 "The republican delegation was outraged by our unwillingness to concede all of the former East Indies to them. It seems negotiations have broken down and the war will continue."
  dei.26.a:0 "The land wasn't even worth a lot!"
- dei.27.t:0 "The Dutch make counterdemands!"
+ dei.27.t:0 "네덜란드가 요구하다!"
  dei.27.d:0 "Citing the impossibility of getting the needed support to pull through the amendment to the constitution to allow for the transfer of sovereignty, the Dutch say they need to retain sovereignty over Western Irian (New Guinea) and the christian Moluccas, who have continuously been supporting them during the revolution. While this is a setback, it seems unlikely at current that we will be able to take the islands by force as we lack the Dutch naval capacity. Perhaps we're better served agreeing with this deal than to continue hostilities: they'll agree to concede the much more valuable rest of the archipelago after all..."
  dei.27.a:0 "We'll make this work..."
  dei.27.b:0 "Insulindia without its east isn't Insulindia!"
- dei.28.t:0 "The Dutch refuse!"
+ dei.28.t:0 "네덜란드가 거부하다!"
  dei.28.d:0 "Despite clearly having been outmatched by the republican forces, the stubborn Dutch still refuse to sign a treaty with 'outlaws and thugs'. It seems we'll have to continue our struggle until they'll finally lose their spirit."
  dei.28.a:0 "A setback indeed!"
- dei.29.t:0 "Volunteers in the Insulindian Revolution"
+ dei.29.t:0 "인슐린디아 혁명의 자원병들"
  dei.29.d:0 "A revolt has flared up in the Dutch East Indies, with the native population seeking to secure their independence from their Dutch overlords. Many in our countries feel connected to the Insulindian plight and want to help. Shall we send a detachment of volunteers?"
  dei.29.a:0 "Of Course!"
  dei.29.b:0 "Rather not!"
- dei.30.t:0 "[From.GetNameDef] sends volunteers"
+ dei.30.t:0 "[From.GetNameDef]이(가) 자원병을 보내다"
  dei.30.d:0 "Feeling connected to the plight of the Insulindian, or in opposition of the Dutch imperialists, [From.GetAdjective] volunteers have arrived to help us with our struggle."
  dei.30.a:0 "We can use their help!"
- dei.31.t:0 "Foreign Volunteers return home"
+ dei.31.t:0 "해외 자원병들이 고향으로 돌아가다"
  dei.31.d:0 "For better or for worse, the Insulindian National Revolution is over now and volunteers that arrived in the Indies to join the TKR from distant lands are returning to their homecountry."
  dei.31.a:0 "Bye... I guess..."
- dei.32.t:0 "Insulindian Volunteers return Home"
+ dei.32.t:0 "인슐린디아 자원병들이 고향으로 돌아가다"
  dei.32.d:0 "The volunteers we've sent to the Insulindian revolt have returned, now that peace has been restored in the Insulindian archipelago. They bring some experience in fighting in hard terrain back with them..."
  dei.32.a:0 "Welcome back!"
  
- dei.35.t:0 "The Netherlands abandons the Indies"
+ dei.35.t:0 "네덜란드가 동인도 제도를 버리다"
  dei.35.d:0 "Disturbing news has arrived from the Indies: the socialists who gained power in the homeland have overthrown the old order through their parliamentary position, and now they have ordered us to protect all Dutch citizens in Insulindia and help them move to the Netherlands if they so desire and to safeguard an orderly retreat from the area. Unsurprisingly, chaos ensued, with Sukarno, just released from prison, taking advantage of the situation to declare Insulindian independence. Meanwhile the Governor-General is missing and mercenaries took over control our part of the island of Borneo. The Indies are collapsing just because of this statement."
  dei.35.a:0 "Switch to the Batavian Commune"
  dei.35.b:0 "Switch to Insulindia"
  
- dei.36.t:0 "Anarchy in the Dutch East Indies"
+ dei.36.t:0 "동인도 제도의 무정부 상태"
  dei.36.d:0 "The socialist government on the Netherlands suddenly abandoned their colony, declaring their own presence illegal and instructing their military presence to protect Dutch civilians that want to return now. The first reports indicate that Sukarno and his national party will take control over the Indies, who will at best be indifferent to our rule, and at worst hostile. While a military expedition to pacify the Indies as a whole is asking for trouble, we could decide to move to take as much of formerly Dutch New Guinea as possible and secure the formerly Dutch side of the strait of Malacca."
  dei.36.a:0 "Ready the ships!"
  dei.36.b:0 "I don't feel like it..."
- dei.37.t:0 "The Germans violate our sovereignty"
+ dei.37.t:0 "독일이 우리의 주권을 침해하다"
  dei.37.d:0 "Concerned with our attitude to their rule and the balance of power in the region, the Germans have sent ships to secure the Sumatran side of the Malacca strait, as well as moving into New Guinea from Kaiser-Wilhelmsland. Sadly, with the current chaos due to the sudden Dutch retreat we can do very little against it."
  dei.37.a:0 "Oh no!"
  dei.38.t:0 "German presence in New Guinea"
