--- a/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
@@ -2,7 +2,7 @@ l_english:
 
 ### Ideas ###
 PAP_black_monday_1:0 "검은 월요일"
-PAP_blackmonday_1_desc:0 "독일 경제의 붕괴는 전 세계에 파문을 일으켰습니다. 독일과 오스트리아 소유의 기업들이 문을 닫고 우리의 국가 채무가 우리의 통제 범위를 넘어서고 있는것은 우리 나라에서도 마찬가지입니다."
+PAP_blackmonday_1_desc:0 "독일 경제의 붕괴는 전 세계에 파문을 일으켰습니다. 독일과 오스트리아 소유의 기업들이 문을 닫고 국가 채무가 통제 범위를 넘어서고 있는 것은 우리 나라에서도 마찬가지입니다."
 PAP_black_monday_2:0 "검은 월요일"
 PAP_black_monday_3:0 "검은 월요일"
 PAP_food_kitchens:0 "무료 식당"
@@ -24,7 +24,7 @@ PAP_armedcitizens:0 "시민 무장"
 PAP_romanmanpower:0 "로마의 사람들"
 PAP_legionaries:0 "군대 정신"
 PAP_foreign_officers:0 "주아브 장교"
-PAP_sicily_advisors:0 "시실리 조언자"
+PAP_sicily_advisors:0 "시칠리아 조언자"
 PAP_jointstaff:0 "공동 계획 참모"
 PAP_gendarmerie:0 "교황 근위대"
 PAP_impetus:0 "일신된 기동력"
@@ -36,28 +36,28 @@ PAP_resistance_harsh:0 "생디칼리스트 저항 운동"
 ### Opinion Modifiers ###
 
 ### Tooltips ###
-PAP_pius_dead:0 "교황 비오 11 세 사망\n"
+PAP_pius_dead:0 "교황 비오 11세가 선종하다\n"
 PAP_conclave_choice:0 "This focus path will unlock once the Papal Conclave has elected a new Pope\n"
 PAP_temporal_choice:0 "Completing this focus will unlock focuses elsewhere in the tree\n"
 PAP_conclave_preempted:0 "콘클라베가 선언되다\n"
-PAP_conclave_begins:0 "콘클라베가 시작되고 다음 교황이 선택된다\n"
-PAP_issued_encyclical:0 "이미 생디칼리즘에 반대하는 회칙을 발표했다\n"
-PAP_relinquished_temporal_power:0 "교황은 그의 세속적인 힘을 포기했다\n"
-PAP_reinforced_temporal_power:0 "교황은 세속적인 힘을 강화했다\n"
+PAP_conclave_begins:0 "콘클라베가 시작되고 다음 교황이 선택되다\n"
+PAP_issued_encyclical:0 "이미 생디칼리즘에 반대하는 회칙을 발표하다\n"
+PAP_relinquished_temporal_power:0 "교황이 그의 세속 권력을 포기하다\n"
+PAP_reinforced_temporal_power:0 "교황은 세속 권력을 강화하다\n"
 Pius_XI:0 "비오 11세"
-PAP_full_assistance:0 "Two Sicilies has taken on all Papal debt"
-PAP_syndicalist_resistance:0 "Fighting a Syndicalist resistance"
-Pius_XI_desc:0 "교황 비오 11 세는 1922 년부터 교황으로 임명되었으며 교황청 국가의 지도자이기도합니다. 그는 이탈리아 안팎의 카톨릭 신자들에게 사랑받습니다."
+PAP_full_assistance:0 "양 시칠리아가 교황청의 모든 빚을 떠맡다"
+PAP_syndicalist_resistance:0 "생디칼리스트의 저항과 싸우다"
+Pius_XI_desc:0 "교황 비오 11세는 1922년에 교황으로 임명되었으며 교황청의 지도자이기도 합니다. 그는 이탈리아 안팎의 카톨릭 신자들에게 사랑받습니다."
 
 ### Focuses ###
 PAP_conclave:0 "콘클라베 소집"
-PAP_conclave_desc:0 "비오 11 세의 죽음으로 콘클라베는 추기경을 소집해 새 교황을 선택해야 할 것입니다. 교황은 수년간 우리의 길을 결정할 사람입니다."
-PAP_stephen_x:0 "교황 스테판 10세"
-PAP_stephen_x_desc:0 "엘리아 달라 코스타는 자비로 인해 사람들이 가장 좋아하는 사람입니다. 그러나 그는 정치에 지나치게 관심이있는 사람이 아니며, 그의 선거는 교황청이 국민의 통치에 도움을 줄 가능성이 높습니다."
-PAP_help_poor:0 "도움이 필요한 사람들을 돕는다"
-PAP_help_poor_desc:0 "우리 나라의 가난한 사람들은 우리 주님 께서 우리에게 명령하신 것처럼 먹을 필요가 있습니다. 새로운 자선 제도는 인기있는 기부금을 활용하여 정부가 자원을 다른 곳에 투자 할 수있게 해줍니다."
+PAP_conclave_desc:0 "비오 11세의 선종으로 콘클라베로 추기경을 소집해 새 교황을 선출해야 합니다. 교황은 수년간 우리가 나아갈 길을 결정할 사람입니다."
+PAP_stephen_x:0 "교황 스테파노 10세"
+PAP_stephen_x_desc:0 "엘리아 달라 코스타는 자비로 인해 사람들이 가장 좋아하는 사람입니다. 그러나 그는 정치에 지나치게 관심이 없으며, 그의 선출은 교황청이 국민의 통치에 도움을 줄 가능성이 높습니다."
+PAP_help_poor:0 "도움이 필요한 사람들을 도움"
+PAP_help_poor_desc:0 "우리 나라의 가난한 사람들은 주님께서 우리에게 명령하신 것처럼 먹을 필요가 있습니다. 새로운 자선 제도는 인기있는 기부금을 활용하여 정부가 자원을 다른 곳에 투자 할 수 있게 해줍니다."
 PAP_displaced_families:0 "난민 가족 돕기"
-PAP_displaced_families_desc:0 "세계 대전 이후 이탈리아의 붕괴와 북부의 생디칼리즘의 부상으로 많은 난민들이 남쪽으로 도망 갔고 오늘날에도 국경을 따라 일부는 생 디칼리스트 폭정으로부터 피난처를 찾는다. 도움을주는 우리의 의무에도 불구하고, 우리는이 난민들을 거의 무시하고 과격한 상황에 빠지게했습니다. 새로운 교황이 바로 잡아 줄 수있는 결정입니다."
+PAP_displaced_families_desc:0 "세계 대전 이후 이탈리아의 붕괴와 북부의 생디칼리즘의 부상으로 많은 난민들이 남쪽으로 도망갔고 오늘날에도 일부는 국경을 따라 생디칼리스트 폭정으로부터 피난처를 찾고 있습니다. 도움을 줘야 하는 우리의 의무에도 불구하고, 우리는 이 난민들을 거의 무시하고 심각한 상황에 빠지게 했습니다. 새로운 교황이 바로 잡아 줄 수 있는 결정입니다."
 PAP_call_people:0 "시민 소집"
 PAP_call_people_desc:0 "가난한 사람들과 일반 대중에 관한 문제는 그들이 많은 사람들 속에 존재한다는 것입니다. 연준, 옷을 입은 채로 신이 제공 할 수있는 영감을 불어 넣어 교황의 의지를 지원하고 용병들과 비교할 수없는 열렬한 열정을 쏟을 수 있습니다."
 PAP_john_xxiii:0 "교황 요한 23세"
@@ -260,12 +260,12 @@ papalstate.3.a:0 "완벽하군"
 papalstate.4.t:0 "신자들의 기부"
 papalstate.4.d:0 "신실한 사람들로부터의 기부 성도들이 아닌 신자들로부터 수세기 동안 위협 받고있는 하느님의 교회의 바로 자리에있는 천주교 신자들로부터 기부금이 전 세계적으로 퍼졌습니다."
 papalstate.4.a:0 "Every bit counts"
-papalstate.5.t:0 "The Pontine Marshes"
-papalstate.5.d:0 "Pontine 습지를 깨끗하게하고 농업이나 산업을 위해 한 번 쓸모없는 땅을 열도록 명령이 내려졌습니다. 이 계획은 수천 명의 로마인을 고용해야 할 것이며 많은 일을 끝내기까지 수개월이 걸릴 것입니다. 그러나 그 결과는 그만한 가치가 있습니다."
-papalstate.5.a:0 "계속 일하는 한 행복 해요."
-papalstate.6.t:0 "Pontine 늪은 개척되었다"
-papalstate.6.d:0 "이전에 Pontine Marshes로 알려진 지역은 이제 개척되었으며, 공장과 농장이이 지역 전체로 솟아 오르고, 타락한 생 디칼리스트에 대한 필연적 인 십자군 운동을 위해 경제적으로 소국을 강화했습니다."
-papalstate.6.a:0 "A monumental achievement!"
+papalstate.5.t:0 "폰틴 습지"
+papalstate.5.d:0 "폰틴 습지를 깨끗하게하고 농업이나 산업을 위해 한 번 쓸모없는 땅을 열도록 명령이 내려졌습니다. 이 계획은 수천 명의 로마인을 고용해야 할 것이며 많은 일을 끝내기까지 수개월이 걸릴 것입니다. 그러나 그 결과는 그만한 가치가 있습니다."
+papalstate.5.a:0 "계속 일하는 한 행복하다."
+papalstate.6.t:0 "폰틴 습지가 개척되다"
+papalstate.6.d:0 "이전에 폰틴 습지로 알려진 지역은 이제 개척되었으며, 공장과 농장이이 지역 전체로 솟아 오르고, 타락한 생 디칼리스트에 대한 필연적 인 십자군 운동을 위해 경제적으로 소국을 강화했습니다."
+papalstate.6.a:0 "기념할 만한 업적이군!"
 papalstate.7.t:0 "비오 11 세가 떠나다"
 papalstate.8.t:0 "콘클라베"
 papalstate.8.d:0 "교황청은 마침내 비오 11 세가 사망 한 후 새로운 교황 선출을 심의하기 위해 모였다. 결국 그들은 선택합니다 ..."
