--- a/Kaiserreich Korean Translation/localisation/KR_Yemen_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Yemen_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 ### Ideas ###
 YEM_black_monday:0 "Ripples of Black Monday"
 YEM_black_monday_desc:0 "While not hitting us as hard as other nations, our connections to the Ottoman Empire has given us the Black Monday economic contagion. There is no doubt that the Republicans will blame the Imam for this."
@@ -96,9 +96,9 @@ YEM_proclaim_kingdom:0 "Proclaim the Mutawakkilite Kingdom"
 YEM_proclaim_kingdom_Desc:0 "It is time! With our country more unified than ever, we can officially abolish the Imamate and officially declare the Kingdom of Yemen! Of course, we must first deal with the Ottomans who will not take kindly to this."
 
 ### Tooltips ###
-YEM_free_fate_tooltip:0 "§RThis will affect the fate of our country once we break free from Ottoman rule.§! \n"
-YEM_OTT_peace_tooltip:0 "§RWe'll need to hold out against the Ottomans for 4 months before we can truly break free.§! \n"
-YEM_rebel_tooltip:0 "§RWe will rebel against the decaying Ottoman Empire!§! \n"
+YEM_free_fate_tooltip:0 "§RThis will affect the fate of our country once we break free from Ottoman rule.§!\n"
+YEM_OTT_peace_tooltip:0 "§RWe'll need to hold out against the Ottomans for 4 months before we can truly break free.§!\n"
+YEM_rebel_tooltip:0 "§RWe will rebel against the decaying Ottoman Empire!§!\n"
 YEM_rebel:0 "Yemen's Rebellion"
 YEM_rassid_arabia_flag:0 "Rassid Arabia has been declared"
 YEM_SocLibs:0 "The Shabab al-Amr have been elected"
@@ -129,11 +129,6 @@ YEM_paternal_autocrat_party:0 "Imamate"
 YEM_paternal_autocrat_party_long:0 "The Imamate"
 YEM_national_populist_party:0 "YAR"
 YEM_national_populist_party_long:0 "Yemen Arab Republic"
-
-###Leader Descriptions###
-POLITICS_YAHYA_HAMID_DESC:0 "From 1934 to 1948, Yahya redirected his energies toward internal consolidation of his authority and the creation of a viable central government, answerable to him personally. To this end, control of the hinterland was strengthened by the establishment of a standing army and the naming of his sons as governors of key provinces. Tighter control over affairs in Sana'a, the capital, was assured by expanding the scope of administrative functions and appointing other sons as supervisors of old and new political institutions . The regime sent Yemen's first students abroad military cadets to the ottomans in the 1930s and civilian students, the Famous Forty, to Egypt in the late 1940s. An early attempt was made to introduce some direction to the nascent national economy by the establishment of a Yemen trading company. Even with these changes, Yahya's Yemen was a semi-feudal state in which even the most basic measures required his personal approval."
-POLITICS_ALI_NASSAR_AL-QADARI_DESC:0 "The son of Sheikh Nasser bin Mas'ad. Ali Nasser had a common background. As a sunni, he took up rebellion against Imam Yahya in 1928 when the Imam has imposed his rule over Aden. Al Nasser then fled the Imam's draft, and joined the rebels. The rebellion saw Ali Nasser tap into his artisitc side, waxing poetic about his mission to kill the Imam. To this end, he joined the underground Hait al-Nadial organization, and through his expressive voice became their leader."
-POLITICS_SHABAB_AL-AMR_DESC:0 "Out of Ta'izz, the Numan family could be described as middle class. As a sunni, Ahmad could not attain a proper education in muslim science to advance in Yemen. This may have been due to rumors that his family was descended from Yemeni Jews. Instead, Ahmad was educated in western logic at the al Madrassa al Ahliyya. This school eventually played host to Ahmad's reform group Nadi a Islah. The Nadi a Islah saw both the Mutawakkili kingdom and the Ottoman Caliphate as relics that held back Yemen. He formed a program that disguised social reforms behind the terminology of ractionaries. Promoting the Good and Preventing the Bad was allowed his rebellion to sway otherwise conservatives Yemenis. Ultimately, this proclemation for Yemen was to ease change into a country badyl divided. "
 
 ### Events ###
 
