--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -37,7 +37,7 @@ niigata_riots:0 "니가타 민란"
 JAP_imperial_gov:0 "제국을 위하여!"
 JAP_DEM_GOV:0 "동양의 민주주의"
 control_faction:0 "주우하 파벌"
-Fund_Adjustment_Ordinance:0 "The Fund Adjustment Ordinance"
+Fund_Adjustment_Ordinance:0 "기금 조정 조례"
 Fund_Adjustment_Ordinance_desc:0 "The Fund Adjustment Ordinance is the first of a series of 'National Defence Ordinances' decreed by the Centralist regime. The state-owned Bank of Japan is now empowered to the regulation capital investments, the establishment of companies, and the subscription or underwriting of securities. This will allow the Government to control and allocate funds into war industries."
 National_Total_Mobilisation_Ordinance:0 "The National Total Mobilisation Ordinance"
 National_Total_Mobilisation_Ordinance_desc:0 "The National Total Mobilisation Ordinance is designed to provide the Government a means to control and mobilise all the resources and manpower available. During war-time, we will have full control over the labour supply, production of goods, financial interaction, industrial and labour organisations, prices, and the press."
@@ -601,17 +601,17 @@ japdom.54.b:0 "Elect Minseito (Liberals)."
 japdom.54.c:0 "Elect Kokumin Domei (Nationalists)."
 japdom.54.e:0 "Elect Shakai Taishuto (Socialists)."
 
-japdom.55.t:0 "General Elections of 1945"
+japdom.55.t:0 "1945년 총 선거"
 
-japdom.56.t:0 "The Emperor has been shot!"
+japdom.56.t:0 "천황 암살미수 사건!"
 japdom.56.d:0 "His Imperial Majesty Hirohito has been shot by a radical Syndicalist who was infuriated by the military takeover of the nation, His Majesty is in critical condition and the doctors are not sure if he will live..."
-japdom.56.a:0 "Hirohito makes a miraculous recovery!"
-japdom.56.b:0 "His Majesty is dead, Prince Chichibu will become regent."
+japdom.56.a:0 "기적적으로 회복될 것이다!"
+japdom.56.b:0 "폐하가 돌아가셨으니, 치치부 친왕이 섭정을 맡을 것이다"
 
-japdom.57.t:0 "A Second Meiji restoration?"
+japdom.57.t:0 "2차 메이지 유신?"
 japdom.57.d:0 "It has been three years since Prince Chichibu became regent for his nephew Akihito, but now many in the radical Restorationist clique, which the regent supports, have now told the regent they would help him in overthrowing his nephew and becoming Emperor himself."
-japdom.57.a:0 "All hail Emperor Yasuhito!"
-japdom.57.b:0 "That would be wrong. He is the true emperor."
+japdom.57.a:0 "야스히토 천황폐하께 경례!"
+japdom.57.b:0 "틀렸습니다. 그는 진정한 천황입니다."
 
 japdom.58.t:0 "Hayashi Senjuro is dead!"
 japdom.58.d:0 "A member of the Centralists and a general in our army, Hayashi Senjuro has died today."
